vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeComparisonNoCodeSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPoYdcToESM8JLnmC/mRp/9bHwJANg7136fkuBvre1WXwH01G8vafADyufxZ2t1b1jBpZecsf
C8DLnmMhVarz+IhCd5VAOViFrKRFeuih+tNY7Riq4hua7do6j2F8FqupYbX1mV/qJmUMFyuD2e8W
l1SFdbgH7GjsJZT2Xw6vatkwl5EU24/Q7C9zdCoc1yyAJB5cIjTtMi8pEzRJli919MRhtjqaEJ83
giwuy8RoY31pfN5RE1tF2MRU2dAhCUOOjNHLueF1jUkizwJsrK0Qejh8cyrbWbfgRrDxamG+Q8zd
TNiZJ0oMAeVI3qegk8L5LO1rlBZ7oXwiogyiuFi/bthAQizwtoYrPFS5e3amtYVm+hMU1RMzsckj
nf0m3AzUtNqaNIn58s2qrxHBGodsbC23nLwoMncWGT/tl2JEPE3d1pQXUChxDAkdSBW8KwXZXiLq
ed1JRdEuCulfvBCR5tn8puKLLWsIMEWziacYZR0ad9B+fjK4gG4lBqvhoP4HPSbEgfn3Zff7xu0q
zVkYct6EEq+UVfFqZQmYCwcF3DtfHJ5+POuuHDoypy1KsDid6dxRoiQbZ8q6PKIkFU9ECA4o+o2/
TqHRLitqsCgFfOIiFGrrrAVgMW4lxtk/xvMZVBaCx19DGJWeXNDAY+gfpfvaZ40WcjwQzhQA9ss3
7AQgNVRQCz0XrTc8dOvLMs3eM9XSHp9hvG8F5qQsMhLQB7viJDnymksaVvnEFdOI9qjHw94oZnHE
cID0coD7Uv1Z+ka3oqnoMOVj2AFaQaOp6T73o07+AeM6/oDGdNtTeIPRjsaZuEo6QQPESj6e6iZT
1T2zNBTu1oBPW688lYphcO6zI3WvxJNpOAJe0n1M8dxv0JlnqApGwN3LcoZ7EfiNyGgazdbHALqx
8OavFnJmQoffFoNiK0WsBH+8Z8P67JsLi07IPS/MKTrr+qL38MWLWx9CE3ruMQ5LQDhgUhCDoc1O
vUkIALiDrg60QIwzNVzTty63IoA7oG8VCdIrHxKs6CcHaREv+dkC6w9qU12qs4E5FSaWtINzPH8I
aeKuOro6ajHrmGFCkl4zp3WFn+G7WMD/TJXjZ5oB19SG4XnOMFpRcDUNW/sl9thw63C65YXCJ0i/
Sk1UXd8Z5cmVeX8PMlvw3KdlXqh3s9W7UkJ5GoETXGQc33isGYt7/TenUZeVZc9sGkV2b13cU4Le
/NzLwp/zyXHw3g2DD3l7eXourbzUUhlu/6ivJolchEIUbA5MXknbGe4woJ9lFN8qt6FxZsrkI9Pt
ztq3c9ND42s4KJbVowDT308S+DOf9STtIDsDblBt6Chxqfo7GMuSHcCcKF5xiRl3VdW1Qj6MxXCr
LFeu1p8Zk+uTHW0/o+cCXnEIZmJfR2+i/OhT81Hjfv+iNbnAZeDntWFJHJhJ5Ajhgt4dFWmT32Uf
GuqPOdrSCDTGXYHtOYyzXkf4KKBp6zWdPO+EIC75kKC7mXlZmaDMwSPsD5coaKRzWYL41OFLSLOt
VOQBBccgbT9O+pP1zLmK0wDiU+TqZo7iy1H6aK28wIuHa58Vy/Mb4kf/TKyZygXruLpYC08Sf2BG
WRu=